--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "pokedex-react",
   "version": "0.1.0",
   "main": "index.js",
+  "homepage": "https://Benny-03.github.io/pokedex-react",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d dist" 
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "vite": "^6.0.11"
   },
   "dependencies": {
