--- a/package.json
+++ b/package.json
@@ -2,19 +2,15 @@
   "name": "pokedex-react",
   "version": "0.1.0",
   "main": "index.js",
-  "homepage": "https://Benny-03.github.io/pokedex-react",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "predeploy": "npm run build", 
-    "deploy": "gh-pages -d dist" 
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "gh-pages": "^6.3.0",
     "vite": "^6.0.11"
   },
   "dependencies": {
